--- a/style/fail.css
+++ b/style/fail.css
@@ -1,25 +1,16 @@
-#container {
-	height:500px;
-	width:500px;
+div#container {height:500px;width:500px;}
+	img.a	{
+		width: 50px;
+		height:50px;
+		position:fixed;
 }
-#a {
-	width: 50px;
-	height:50px;
-	background-color:red;
-	position:relative;
-    
+     img.b {
+       width: 50px;
+       height:50px;
+       position:fixed;
 }
-#b {
-	width: 50px;
-	height:50px;
-	background-color:blue;
-	position:fixed;
-    
-}
-#c {
-	width: 50px;
-	height:50px;
-	background-color:green;
-	position:fixed;
-    
+     img.c {
+       width: 50px;
+       height:50px;
+       position:fixed;
 }
