--- a/style/master.css
+++ b/style/master.css
@@ -8,6 +8,10 @@
 	width:50%;
 	height:177px;
 }
-body {
-    background-color:#00AAAA;
+img {
+width: 50px;
+height:50px;
+ background-color:#ffffff;
+position:fixed;
+    
 }
