--- a/style/master.css
+++ b/style/master.css
@@ -8,10 +8,35 @@
 	width:50%;
 	height:177px;
 }
-img {
+button {
+	width:20px;
+	height:15px;
+}
+canvas {
+	border:#666 1px solid;
+}
+div#container {height:500px;width:500px;}
+div.a {
+width: 50px;
+height:50px;
+background-color:#ffffff;
+position:fixed;
+top:100px;
+left:100px;
+}
+div.b {
 width: 50px;
 height:50px;
  background-color:#ffffff;
 position:fixed;
-    
+    top:10px;
+    left:10px;
+}
+div.c {
+width: 50px;
+height:50px;
+ background-color:#ffffff;
+position:fixed;
+    top:200px;
+    left:100px;
 }
