--- a/style/master.css
+++ b/style/master.css
@@ -37,6 +37,22 @@ body {
 	width:400px;
 	height:135px;
 }
+div#imagediv
+	img.a {
+       width: 50px;
+       height:50px;
+       position:fixed;
+     }
+     img.b {
+       width: 50px;
+       height:50px;
+       position:fixed;
+     }
+     img.c {
+       width: 50px;
+       height:50px;
+       position:fixed;
+}
 #footer {
    position:absolute;
    bottom:0;
