--- a/style/master.css
+++ b/style/master.css
@@ -55,9 +55,15 @@ div#imagediv
        height:50px;
        position:fixed;
 }
+div#mobilepaycontainer
+	img.a {
+		height:400px;
+		width:300px;
+		margin-left:500px;
+	}
+		
 #footer {
-   position:absolute;
-   bottom:0;
+   position:relative;
    width:100%;
    height:60px;
    background:#6cf;
