--- a/style/master.css
+++ b/style/master.css
@@ -4,11 +4,12 @@ body {
    padding:0;
    height:100%;
 }
-#container {
+#contentcontainer {
    min-height:100%;
-
+   height:100%;
    position:relative;
 }
+
 #header {
    background:#ff0;
    padding:10px;
@@ -57,22 +58,24 @@ div#imagediv
 }
 
 #mpcontainer {
-	   display:inline-box;
-	   width: 100%;
-       height:200px;
+	   margin-left:auto;
+	   margin-right:auto;
+	   width: 30%;
 }
 div#mpcontainer
 	img.a {
-		display:inline-box;
-		width: 150px;
-        height:200px;
-	}
-		
+		width: ;
+        height:;
+		float: right;
+}
+#text {
+	display:inline-block;
+}
 #footer {
-   position:relative;
+   position:absolute;
+   bottom:0;
    width:100%;
-   height:60px;
+   height:60px;   
    background:#6cf;
-   
 }
  
