--- a/style/master.css
+++ b/style/master.css
@@ -9,7 +9,6 @@ body {
    height:100%;
    position:relative;
 }
-
 #header {
    background:#ff0;
    padding:10px;
@@ -56,7 +55,9 @@ div#imagediv
        height:50px;
        position:fixed;
 }
-
+#ppcontainer {
+	
+}
 #mpcontainer {
 	   margin-left:auto;
 	   margin-right:auto;
@@ -64,8 +65,6 @@ div#imagediv
 }
 div#mpcontainer
 	img.a {
-		width: ;
-        height:;
 		float: right;
 }
 #text {
