--- a/style/master.css
+++ b/style/master.css
@@ -77,4 +77,21 @@ div#mpcontainer
    height:60px;   
    background:#6cf;
 }
- 
+ #snowflakeContainer {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+.snowflake {
+    padding-left: 15px;
+    font-family: Cambria, Georgia, serif;
+    font-size: 14px;
+    line-height: 24px;
+    position: fixed;
+    color: #FFFFFF;
+    user-select: none;
+    z-index: 1000;
+}
+.snowflake:hover {
+    cursor: default;
+}
