--- a/style/master.css
+++ b/style/master.css
@@ -4,6 +4,7 @@ body {
    padding:0;
    height:100%;
 }
+
 #contentcontainer {
    min-height:100%;
    height:100%;
@@ -31,6 +32,7 @@ body {
 #body {
    padding:10px;
    padding-bottom:60px;
+   background-color:grey;
 }
 #counter {
 	text-align:center;
